[tool.poetry]
name = "ggrp"
version = "0.1.0"
description = ""
authors = ["justinearl <j.guevarra@psp.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
